# News-Verifier

./: Fake_News_Det.py  Fake_News_Detection.ipynb  README.md  bash.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt
newVerifier/: asgi.py  settings.py  urls.py  wsgi.py
news/: admin.py  apps.py  cron.py  daily_news.py  forms.py  model.pkl  models.py  operator.py  urls.py  utils.py  views.py
news/migrations/: 0001_initial.py  0002_news_dtstr.py  0003_auto_20221130_2101.py  0004_news_posting_date.py  0005_alter_news_url.py  0006_auto_20221218_1826.py  0007_alter_news_posting_date.py
news/templates/news/: index.html
static/css/: index.css
