[tool.poetry]
name = "newsverifier"
version = "0.1.0"
description = "News Verifier"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "3.6.2"
appdirs = "1.4.4"
apscheduler = "3.9.1.post1"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asgiref = "3.4.1"
astroid = "2.4.2"
asttokens = "2.2.0"
async-timeout = "3.0.1"
attrs = "21.2.0"
autobahn = "21.3.1"
automat = "20.2.0"
babel = "2.11.0"
backcall = "0.2.0"
beautifulsoup4 = "4.11.1"
black = "21.11b1"
bleach = "5.0.1"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
click = "8.0.3"
colorama = "0.4.4"
constantly = "15.1.0"
dateparser = "1.1.4"
debugpy = "1.6.4"
decorator = "5.1.1"
defusedxml = "0.7.1"
distlib = "0.3.1"
dj-database-url = "0.5.0"
django = "3.2.11"
django-apscheduler = "0.6.2"
django-crispy-forms = "1.14.0"
entrypoints = "0.4"
executing = "1.2.0"
fastjsonschema = "2.16.2"
filelock = "3.0.12"
gunicorn = "20.1.0"
hyperlink = "21.0.0"
idna = "3.2"
incremental = "21.3.0"
ipykernel = "6.17.1"
ipython = "8.7.0"
ipython-genutils = "0.2.0"
isort = "5.6.4"
jedi = "0.18.2"
joblib = "1.2.0"
json5 = "0.9.10"
jsonschema = "4.17.3"
lazy-object-proxy = "1.4.3"
markupsafe = "2.1.1"
matplotlib-inline = "0.1.6"
mccabe = "0.6.1"
mistune = "2.0.4"
mypy-extensions = "0.4.3"
nbclassic = "0.4.8"
nbclient = "0.7.2"
nbconvert = "7.2.5"
nbformat = "5.7.0"
nest-asyncio = "1.5.6"
newscatcherapi = "0.7.2"
notebook = "6.5.2"
notebook-shim = "0.2.2"
packaging = "21.3"
pandocfilters = "1.5.0"
parso = "0.8.3"
pathspec = "0.9.0"
pickleshare = "0.7.5"
pillow = "9.0.1"
platformdirs = "2.5.4"
prometheus-client = "0.15.0"
prompt-toolkit = "3.0.33"
psutil = "5.9.4"
psycopg2-binary = "2.9.1"
pure-eval = "0.2.2"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pygments = "2.13.0"
pyopenssl = "20.0.1"
pyparsing = "3.0.9"
pyrsistent = "0.19.2"
python-dateutil = "2.8.2"
pytube = "12.0.0"
pytz = "2021.3"
pytz-deprecation-shim = "0.1.0.post0"
pyzmq = "24.0.1"
regex = "2021.11.10"
requests = "2.27.1"
send2trash = "1.8.0"
service-identity = "21.1.0"
six = "1.15.0"
sniffio = "1.3.0"
soupsieve = "2.3.2.post1"
sqlparse = "0.4.2"
stack-data = "0.6.2"
terminado = "0.17.0"
threadpoolctl = "3.1.0"
tinycss2 = "1.2.1"
tornado = "6.2"
traitlets = "5.6.0"
typing-extensions = "4.0.0"
tzdata = "2022.6"
tzlocal = "4.2"
urllib3 = "1.26.9"
wcwidth = "0.2.5"
webencodings = "0.5.1"
websocket-client = "1.4.2"
whitenoise = "6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
